Multi-processing and spectral output are supported.

Wrote rxpiece tool that will render pictures using tiling and
can handle different output formats and hyperspectral pictures.
Only runs on a single machine, however -- now NFS locking on
shared volumes.  Mainly a demonstration tool for RpictSimulManager
C++ class, but may have its uses.

Fixed a bug in BSDF sampling of sources pointed out by
David Geisler-Moroder, which tended to overestimate specular
contributions for some BSDFs.

Added crude ability to read and convert spectra to RGB in ximage,
ra_bmp, ra_ps, and ra_rgbe programs.  Also updated fast tone-mapping
library to handle spectral HSR inputs at the same time.  HSR
input handling was added in a similar fashion to pcond and pvalue
for convenience.

Added handling of hyperspectral images to normtiff, a handy program
for quickly tone-mapping Radiance RGBE, XYZE, and now hyperspectral
pictures, as well as IEEE float or LogLuv TIFFs.

Added handling of hyperspectral pictures to pextrem, though
results are still reported in RGB.

Added accurate conversion of hyperspectral pictures to ra_xyze.

Added hyperspectral picture conversion to ra_tiff, with accurate
color when targeting 16-bit/comp., LogLuv, and float utput,
and the approximate method for 24-bit RGB.

Taoning added genssky -L option to specify global and diffuse
illuminance values for output calibration.

Created C++ class for rcontrib and example tool rxcontrib, which
is an optional compile in the src/rt directory.  The output
model is more general in some respects and the operations more
efficient, but standard output is not supported, nor is ASCII
results data.

Added experimental source-skipping method to rpict for scenes
with large number of light sources.  Currently works with
rcontrib and separate srcsamp image-processing tool.  Controlling
rpict options are -dS for skip bitmap specification and -dC
for correction coefficient image.  Compile using -DSSKIPOPT
to include this option.